# linamon

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/utils/: builds.py  mediawiki.py  soup.py
