[project]
name = "sylviemon"
version = "0.1.0"
description = "pokemon route caller"
authors = [
    {name = "Lina Duangsay",email = "112112511+Lina-Duangsay@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "mediawikiapi (>=1.3,<2.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "poetry (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
